welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: not found: value c
  	{gauche();avance();for (i<-0 to T.length -1) {coupstylo(c);avance()}}
                                                                ^