welcome.lessons.welcome.array.basics.Array1.scala.code
def coupstylo(c:Color) {setCouleurBrosse(c);baisseBrosse();leveBrosse()}

override def run() {
  var T= new Array[Color] (getMondeHauteur())
  for (i <- 0 to (T.length -1)) {T(i)=getCouleurSol();avance()}
  for (i <- 0 to T.length -2)
  	{gauche();avance();for (i<-0 to T.length -1) {coupstylo(c);avance()}}
  
}